# Executable-Answers

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
executable-answers/checks/: __init__.py  numeric.py
executable-answers/exa/: __init__.py  cli.py  critique.py  extract.py  sources.py  verify.py
executable-answers/schemas/: claimgraph.json  report.json
executable-answers/tests/: test_numeric.py
executable-answers/tests/fixtures/: answer_fail.md  answer_pass.md
